fixed overflow margins by removing width 100vw on header in style.css

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
 }
 
 header {
-    width: 100vw;
     background-color: #f9f6e5;
     text-align: center;
     margin: 0;
